load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("//build/rules/container:def.bzl", "container_image")
load("@rules_oci//oci:defs.bzl", "oci_push")

pkg_tar(
    name = "bin",
    srcs = [
        "//go/cmd/gomodule-proxy",
    ],
    mode = "0755",
    package_dir = "/usr/local/bin",
)

container_image(
    name = "image",
    base = "@com_google_distroless_base",
    entrypoint = ["/usr/local/bin/gomodule-proxy"],
    tars = [":bin"],
)

oci_push(
    name = "push",
    image = ":image",
    repository = "registry.f110.dev/tools/gomodule-proxy",
    remote_tags = ["latest"],
)

oci_push(
    name = "push_quay",
    image = ":image",
    repository = "quay.io/f110/gomodule-proxy",
    remote_tags = ["latest"],
)
