load("@rules_oci//oci:defs.bzl", "oci_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("//build/rules/container:def.bzl", "container_image")

pkg_tar(
    name = "bin",
    files = {
        "//go/cmd/gomodule-proxy:linux_amd64": "/usr/local/bin/gomodule-proxy",
    },
    mode = "0755",
)

container_image(
    name = "image",
    base = "@com_google_distroless_base",
    entrypoint = ["/usr/local/bin/gomodule-proxy"],
    tars = [":bin"],
)

oci_push(
    name = "push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "registry.f110.dev/tools/gomodule-proxy",
)

oci_push(
    name = "push_quay",
    image = ":image",
    remote_tags = ["latest"],
    repository = "quay.io/f110/gomodule-proxy",
)
