load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("//build/rules/container:def.bzl", "container_image")
load("@rules_oci//oci:defs.bzl", "oci_push")

pkg_tar(
    name = "bin",
    files = {
        "//go/cmd/inkbird-exporter": "/usr/local/bin/inkbird-exporter",
    },
    mode = "0755",
)

container_image(
    name = "image",
    base = select({
        "@io_bazel_rules_go//go/platform:linux_amd64": "@com_google_distroless_base",
        "@io_bazel_rules_go//go/platform:linux_arm64": "@com_google_distroless_base_arm64",
        "//conditions:default": "@com_google_distroless_base",
    }),
    entrypoint = ["/usr/local/bin/inkbird-exporter"],
    tars = [":bin"],
)

oci_push(
    name = "push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "registry.f110.dev/tools/inkbird-exporter",
)
