load("@rules_oci//oci:defs.bzl", "oci_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("//build/rules/container:def.bzl", "container_image")

pkg_tar(
    name = "bin",
    files = {
        "//go/cmd/notion-todo-scheduler:linux_amd64": "/usr/local/bin/notion-todo-scheduler",
    },
    mode = "0755",
)

container_image(
    name = "image",
    base = "@com_google_distroless_base",
    entrypoint = ["/usr/local/bin/notion-todo-scheduler"],
    tars = [":bin"],
)

oci_push(
    name = "push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "repo.center.x.f110.dev/automation-tools/notion-todo-scheduler",
)
