load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

pkg_tar(
    name = "bin",
    srcs = [
        "//third_party/pkgsite/cmd/frontend",
        "//third_party/pkgsite/cmd/prober",
        "//third_party/pkgsite/cmd/worker",
    ],
    mode = "0755",
    package_dir = "/usr/local/bin",
)

container_image(
    name = "image",
    base = "@com_google_distroless_base//image",
    tars = [":bin"],
)

container_push(
    name = "push",
    format = "Docker",
    image = ":image",
    registry = "registry.f110.dev",
    repository = "tools/pkgsite",
    tag = "latest",
)
