load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

pkg_tar(
    name = "content",
    deps = [
        "//third_party/pkgsite/content/static/css:files",
        "//third_party/pkgsite/content/static/html:files",
        "//third_party/pkgsite/content/static/html/helpers:files",
        "//third_party/pkgsite/content/static/html/pages:files",
        "//third_party/pkgsite/content/static/html/worker:files",
        "//third_party/pkgsite/content/static/img:files",
        "//third_party/pkgsite/content/static/js:files",
        "//third_party/pkgsite/migrations:files",
    ],
)

pkg_tar(
    name = "bin",
    srcs = [
        "//third_party/pkgsite/cmd/frontend",
        "//third_party/pkgsite/cmd/prober",
        "//third_party/pkgsite/cmd/worker",
        "@com_github_migrate_migrate//:bin",
    ],
    mode = "0755",
    package_dir = "/usr/local/bin",
)

container_image(
    name = "image",
    base = "@com_google_distroless_base//image",
    tars = [
        ":bin",
        ":content",
    ],
)

container_push(
    name = "push",
    format = "Docker",
    image = ":image",
    registry = "registry.f110.dev",
    repository = "tools/pkgsite",
    tag = "latest",
)
