load("@io_bazel_rules_go//go:def.bzl", "go_cross_binary")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_push")
load("//build/rules/deb:deb_pkg.bzl", "deb_pkg")
load("//build/rules/container:def.bzl", "container_image")

go_cross_binary(
    name = "frontend_linux_amd64",
    platform = "@io_bazel_rules_go//go/toolchain:linux_amd64",
    target = "//third_party/pkgsite/cmd/frontend",
)

go_cross_binary(
    name = "seeddb_linux_amd64",
    platform = "@io_bazel_rules_go//go/toolchain:linux_amd64",
    target = "//third_party/pkgsite/devtools/cmd/seeddb",
)

go_cross_binary(
    name = "db_linux_amd64",
    platform = "@io_bazel_rules_go//go/toolchain:linux_amd64",
    target = "//third_party/pkgsite/devtools/cmd/db",
)

pkg_tar(
    name = "frontend_bin",
    files = {
        ":frontend_linux_amd64": "/usr/local/bin/frontend",
        ":seeddb_linux_amd64": "/usr/local/bin/seeddb",
        ":db_linux_amd64": "/usr/local/bin/db",
        "@com_github_golang-migrate_migrate_amd64//:migrate": "/usr/local/bin/migrate",
    },
)

pkg_tar(
    name = "frontend_deb_packages",
    mode = "0755",
    deps = deb_pkg(
        "debian12",
        "git",
        excludes = [],
    ),
)

container_image(
    name = "frontend_image",
    base = "@com_google_distroless_base",
    entrypoint = ["/usr/local/bin/frontend"],
    tars = [
        ":frontend_bin",
        ":frontend_deb_packages",
        "//third_party/pkgsite/migrations:files",
    ],
)

oci_push(
    name = "frontend_push",
    image = ":frontend_image",
    remote_tags = ["latest"],
    repository = "registry.f110.dev/tools/pkgsite-frontend",
)
