load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("//build/rules/container:def.bzl", "container_image")
load("@rules_oci//oci:defs.bzl", "oci_push")

pkg_tar(
    name = "bin",
    files = {
        "//go/cmd/pv-migrator": "/usr/local/bin/pv-migrator",
    },
    mode = "0755",
)

container_image(
    name = "image",
    base = "@oci_com_google_distroless_base",
    entrypoint = ["/usr/local/bin/pv-migrator"],
    tars = [":bin"],
)

oci_push(
    name = "push",
    image = ":image",
    repository = "registry.f110.dev/tools/pv-migrator",
    repotags = ["latest"],
)
