load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

pkg_tar(
    name = "bin",
    files = {
        "//go/cmd/repo-doc": "/usr/local/bin/repo-doc",
    },
    mode = "0755",
)

container_image(
    name = "image",
    base = "@com_google_distroless_base//image",
    entrypoint = ["/usr/local/bin/repo-doc"],
    tars = [":bin"],
)

container_push(
    name = "push",
    format = "Docker",
    image = ":image",
    registry = "registry.f110.dev",
    repository = "tools/repo-doc",
    tag = "latest",
)
