load("@rules_oci//oci:defs.bzl", "oci_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("//build/rules/container:def.bzl", "container_image")

pkg_tar(
    name = "bin",
    files = {
        "//go/cmd/repo-doc": "/usr/local/bin/repo-doc",
    },
    mode = "0755",
)

container_image(
    name = "image",
    base = "@com_google_distroless_base",
    entrypoint = ["/usr/local/bin/repo-doc"],
    tars = [":bin"],
)

oci_push(
    name = "push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "registry.f110.dev/tools/repo-doc",
)

oci_push(
    name = "push_quay",
    image = ":image",
    remote_tags = ["latest"],
    repository = "quay.io/f110/repo-doc",
)
