load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("//build/rules/container:def.bzl", "container_image")
load("@rules_oci//oci:defs.bzl", "oci_push")

pkg_tar(
    name = "bin",
    files = {
        "//go/cmd/static-web": "/usr/local/bin/static-web",
    },
    mode = "0755",
)

container_image(
    name = "image",
    base = "@oci_com_google_distroless_base",
    entrypoint = [
        "/usr/local/bin/static-web",
        "--document-root",
        "/reviewstack",
        "--mode",
        "spa",
    ],
    tars = [
        ":bin",
        "//third_party/reviewstack",
    ],
)

oci_push(
    name = "push",
    image = ":image",
    repository = "registry.f110.dev/tools/reviewstack",
    repotags = ["latest"],
)
