load("@rules_oci//oci:defs.bzl", "oci_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("//build/rules/container:def.bzl", "container_image")

pkg_tar(
    name = "bin",
    files = {
        "//cmd/simple-http-server:linux_amd64": "/usr/local/bin/simple-http-server",
    },
    mode = "0755",
)

container_image(
    name = "image",
    base = "@com_google_distroless_base_debian12",
    entrypoint = ["/usr/local/bin/simple-http-server"],
    tars = [":bin"],
)

oci_push(
    name = "push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "registry.f110.dev/tools/simple-http-server",
)
