load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

pkg_tar(
    name = "ctags",
    srcs = ["//third_party/universal-ctags/ctags"],
    mode = "0755",
    package_dir = "/usr/local",
)

pkg_tar(
    name = "bin",
    files = {
        "//go/cmd/repo-indexer": "/usr/local/bin/repo-indexer",
    },
    mode = "0755",
)

pkg_tar(
    name = "go",
    srcs = ["@golang_1.17//:srcs"],
    modes = {
        "bin/go": "0755",
    },
    package_dir = "/usr/local/go",
    strip_prefix = "/external/golang_1.17/go",
)

container_image(
    name = "go_container",
    base = "@com_google_distroless_base//image",
    tars = [":go"],
)

container_image(
    name = "image",
    base = ":go_container",
    entrypoint = ["/usr/local/bin/repo-indexer"],
    tars = [
        ":bin",
        ":ctags",
    ],
)

container_push(
    name = "push",
    format = "Docker",
    image = ":image",
    registry = "registry.f110.dev",
    repository = "tools/zoekt-indexer",
    tag = "latest",
)
