load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("//build/rules/container:def.bzl", "container_image")
load("@rules_oci//oci:defs.bzl", "oci_push")

pkg_tar(
    name = "ctags",
    srcs = ["//third_party/universal-ctags/ctags"],
    mode = "0755",
    package_dir = "/usr/local",
)

pkg_tar(
    name = "bin",
    files = {
        "//go/cmd/repo-indexer": "/usr/local/bin/repo-indexer",
    },
    mode = "0755",
)

pkg_tar(
    name = "go",
    srcs = ["@golang_1.17//:srcs"],
    modes = {
        "bin/go": "0755",
    },
    package_dir = "/usr/local/go",
    strip_prefix = "/external/golang_1.17/go",
)

container_image(
    name = "go_container",
    base = "@com_google_distroless_base",
    tars = [":go"],
)

container_image(
    name = "image",
    base = ":go_container",
    entrypoint = ["/usr/local/bin/repo-indexer"],
    env = {
        "PATH": "/usr/local/go/bin",
    },
    tars = [
        ":bin",
        ":ctags",
    ],
)

oci_push(
    name = "push",
    image = ":image",
    repository = "registry.f110.dev/tools/zoekt-indexer",
    repotags = ["latest"],
)

oci_push(
    name = "push_quay",
    image = ":image",
    repository = "quay.io/f110/zoekt-indexer",
    repotags = ["latest"],
)
