load("@rules_oci//oci:defs.bzl", "oci_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("//build/rules/container:def.bzl", "container_image")
load("//build/rules/deb:deb_pkg.bzl", "deb_pkg")

pkg_tar(
    name = "ctags",
    srcs = ["//third_party/universal-ctags/ctags"],
    mode = "0755",
    package_dir = "/usr/local",
)

pkg_tar(
    name = "bin",
    files = {
        "//go/cmd/repo-indexer": "/usr/local/bin/repo-indexer",
    },
    mode = "0755",
)

pkg_tar(
    name = "go",
    srcs = ["@golang_1.21//:srcs"],
    modes = {
        "bin/go": "0755",
    },
    package_dir = "/usr/local/go",
    strip_prefix = "/external/golang_1.21",
)

container_image(
    name = "go_container",
    base = "@com_google_distroless_base",
    tars = [":go"],
)

container_image(
    name = "image",
    base = ":go_container",
    entrypoint = ["/usr/local/bin/repo-indexer"],
    env = {
        "PATH": "/usr/local/go/bin",
    },
    tars = [
        ":bin",
        ":ctags",
    ],
)

oci_push(
    name = "push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "repo.center.x.f110.dev/codesearch/zoekt-indexer",
)

oci_push(
    name = "push_quay",
    image = ":image",
    remote_tags = ["latest"],
    repository = "quay.io/f110/zoekt-indexer",
)

pkg_tar(
    name = "build_dep_packages",
    mode = "0755",
    deps = deb_pkg(
        "debian12",
        "libjansson-dev",
        "libseccomp-dev",
        excludes = [
            "libc6",
            "libgcc-s1",
        ],
    ),
)

container_image(
    name = "build_image",
    base = "@dev_f110_bazel_container_bazelisk_debian12",
    entrypoint = ["/usr/local/bin/bazel"],
    labels = {
        "org.opencontainers.image.source": "https://github.com/f110/mono",
    },
    tars = [":build_dep_packages"],
)

oci_push(
    name = "push_build_image",
    image = ":build_image",
    remote_tags = ["latest"],
    repository = "repo.center.x.f110.dev/codesearch/zoekt-indexer-builder",
)
