load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("//build/rules/container:def.bzl", "container_image")
load("@rules_oci//oci:defs.bzl", "oci_push")

pkg_tar(
    name = "bin",
    files = {
        "@com_github_google_zoekt//cmd/zoekt-webserver": "/usr/local/bin/zoekt-webserver",
    },
    mode = "0755",
)

container_image(
    name = "image",
    base = "@com_google_distroless_base",
    entrypoint = ["/usr/local/bin/zoekt-webserver"],
    tars = [":bin"],
)

oci_push(
    name = "push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "registry.f110.dev/tools/zoekt-webserver",
)

oci_push(
    name = "push_quay",
    image = ":image",
    remote_tags = ["latest"],
    repository = "quay.io/f110/zoekt-webserver",
)
